# ws-demo-poly3

./: .coverage  .env.example  .gitignore  AUTHORIZATION.md  PHASE_4B3_IMPLEMENTATION.md  README.md  demo_authorization.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_login_test.sh  start.sh  sync_test.py  test.sh  test_login.py
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py  auth.py  examples_authorization.py  roles.py  root.py  users.py
app/core/: config.py  cosmos.py  dependencies.py  jwt_service.py  password_service.py  security.py
app/middleware/: __init__.py  auth.py  authorization.py
app/models/: __init__.py  login_attempt.py  refresh_token.py  role.py  role_assignment.py  role_service_config.py  service.py  service_feature.py  token.py  user.py  user_role.py  user_tenant.py
app/repositories/: __init__.py  login_attempt_repository.py  refresh_token_repository.py  role_repository.py  (+4 more)
docs/: api-specification.md  component-design.md
infra/: container-app.bicep
keys/: public.pem
scripts/: README.md  __init__.py  delete_admin.py  seed_data.py  setup_all.py  setup_containers.py
services/auth/: README.md  pyproject.toml  requirements.txt
services/auth/app/: __init__.py
services/auth/app/api/: health.py
services/auth/app/core/: cosmos.py
tests/: TEST_API_ROLES_FIX_REPORT.md  TEST_API_ROLES_IMPLEMENTATION_REPORT.md  TEST_IMPLEMENTATION_REPORT.md  TEST_IMPLEMENTATION_REPORT_FINAL.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_PLAN.md  __init__.py  conftest.py  test_api_auth.py  test_api_roles.py  test_api_users.py  test_auth_api.py  test_auth_extensions.py  test_authorization.py  test_authorization_integration.py  test_integration.py  test_jwt.py  test_jwt_service.py  test_main.py  test_models.py  test_models_role_assignment.py  test_password_service.py  test_repositories_role.py  test_repository_user.py  test_roles_api.py  test_schemas.py  test_security.py  test_service_auth.py  test_service_user.py  test_services_auth_jwt_roles.py  test_services_role.py  test_users_api.py  test_users_edit_api.py
(+30 files in other folders)
